--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -3,5 +3,6 @@
   <%= f.text_field :content %>
   <%= f.label :priority %>
   <%= f.number_field :priority %>
+  <%= f.check_box :done %>
   <%= f.submit %>
 <% end %>
